--- a/PrivGAN_lfw_tf2.ipynb
+++ b/PrivGAN_lfw_tf2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copyright (c) Microsoft Corporation. All rights reserved. \n",
+    "# Copyright (c) Microsoft Corporation. All rights reserved.\n",
     "# Licensed under the MIT License\n",
     "\n",
     "import os\n",
@@ -14,22 +14,17 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import Input\n",
-    "from tensorflow.keras import Model, Sequential\n",
-    "from tensorflow.keras.layers import Reshape, Dense, Dropout, Flatten, LeakyReLU, Conv2D, MaxPooling2D, UpSampling2D\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras import backend as K\n",
-    "from scipy import stats\n",
+    "import torch\n",
     "import warnings\n",
-    "from privacygan import privacy_gan as pg \n",
+    "from privacygan import privacy_gan as pg\n",
     "from privacygan.lfw import lfw_gan\n",
-    "\n",
     "from datetime import datetime\n",
     "from sklearn.datasets import fetch_lfw_people\n",
     "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(torch.__version__, \"device:\", device)\n"
    ]
   },
   {
@@ -45,20 +40,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lfw_people = fetch_lfw_people()\n",
-    "X_all = lfw_people['data']\n",
-    "X_all = (X_all.astype(np.float32) - 127.5)/127.5\n",
+    "# Load LFW dataset via sklearn and build train/test splits\n",
+    "lfw = fetch_lfw_people(min_faces_per_person=20, resize=0.5)\n",
+    "X_all = lfw.data.astype(np.float32)\n",
+    "X_all = (X_all - 127.5) / 127.5\n",
     "\n",
-    "#Generate training test split\n",
-    "frac = 0.1 \n",
-    "n = int(frac*len(X_all))\n",
-    "l = np.array(range(len(X_all)))\n",
-    "l = np.random.choice(l,len(l),replace = False)\n",
-    "X = X_all[l[:n]]\n",
-    "X_comp = X_all[l[n:]]\n",
+    "frac = 0.1\n",
+    "n = int(frac * len(X_all))\n",
+    "idx = np.random.permutation(len(X_all))\n",
+    "X = X_all[idx[:n]]\n",
+    "X_comp = X_all[idx[n:]]\n",
     "\n",
-    "print('training set size:',X.shape)\n",
-    "print('test set size:',X_comp.shape)"
+    "print('training set size:', X.shape)\n",
+    "print('test set size:', X_comp.shape)\n"
    ]
   },
   {
@@ -74,11 +68,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator = lfw_gan.LFW_Generator()\n",
-    "discriminator = lfw_gan.LFW_Discriminator()\n",
-    "(generator, discriminator, dLosses, gLosses) = pg.SimpGAN(X, epochs = 1, batchSize = 256,\n",
-    "                                                         discriminator = discriminator,\n",
-    "                                                         generator = generator)"
+    "(generator, discriminator, dLosses, gLosses) = pg.SimpGAN(\n",
+    "    X,\n",
+    "    generator=lfw_gan.LFW_Generator(),\n",
+    "    discriminator=lfw_gan.LFW_Discriminator(),\n",
+    "    epochs=1,\n",
+    "    batchSize=128,\n",
+    ")\n"
    ]
   },
   {
@@ -97,13 +93,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot distribution of discriminator scores of training and test set\n",
-    "plt.hist(discriminator.predict(X)[:,0],color = 'r', alpha = 0.5, label = 'train', density = True, bins = 50)\n",
-    "plt.hist(discriminator.predict(X_comp)[:,0],color = 'b', alpha = 0.5, label = 'test', density = True, bins = 50)\n",
+    "with torch.no_grad():\n",
+    "    scores_train = discriminator(torch.tensor(X, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "    scores_test = discriminator(torch.tensor(X_comp, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "\n",
+    "plt.hist(scores_train, color='r', alpha=0.5, label='train', density=True, bins=50)\n",
+    "plt.hist(scores_test, color='b', alpha=0.5, label='test', density=True, bins=50)\n",
     "plt.xlabel('Discriminator probability')\n",
     "plt.ylabel('Normed frequency')\n",
     "plt.title('GAN')\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   },
   {
@@ -137,23 +136,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K.clear_session()\n",
-    "optim = Adam(lr=0.0002, beta_1=0.5)\n",
-    "generators = [lfw_gan.LFW_Generator(optim = Adam(lr=0.0002, beta_1=0.5)),\n",
-    "              lfw_gan.LFW_Generator(optim = Adam(lr=0.0002, beta_1=0.5))]\n",
-    "discriminators = [lfw_gan.LFW_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5))\n",
-    "                  ,lfw_gan.LFW_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5))]\n",
-    "pDisc = lfw_gan.LFW_DiscriminatorPrivate(OutSize = 2, \n",
-    "                                      optim = Adam(lr=0.0002, beta_1=0.5))\n",
+    "### Test privGAN (with n_reps = 2)\n",
+    "generators = [lfw_gan.LFW_Generator(), lfw_gan.LFW_Generator()]\n",
+    "discriminators = [lfw_gan.LFW_Discriminator(), lfw_gan.LFW_Discriminator()]\n",
+    "pDisc = lfw_gan.LFW_DiscriminatorPrivate(OutSize=2)\n",
     "\n",
-    "(generators, discriminators, _, dLosses, dpLosses, gLosses)= pg.privGAN(X, epochs = 1, \n",
-    "                                                                           disc_epochs=1,\n",
-    "                                                                           batchSize=256,\n",
-    "                                                                           generators = generators, \n",
-    "                                                                           discriminators = discriminators,\n",
-    "                                                                           pDisc = pDisc,\n",
-    "                                                                           optim = optim,\n",
-    "                                                                           privacy_ratio = 1.0)"
+    "(generators, discriminators, _, dLosses, dpLosses, gLosses) = pg.privGAN(\n",
+    "    X,\n",
+    "    epochs=1,\n",
+    "    disc_epochs=1,\n",
+    "    batchSize=128,\n",
+    "    generators=generators,\n",
+    "    discriminators=discriminators,\n",
+    "    pDisc=pDisc,\n",
+    "    privacy_ratio=1.0,\n",
+    ")\n"
    ]
   },
   {
@@ -172,16 +169,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#generate synthetic images\n",
-    "noise = np.random.normal(0, 1, size=[X.shape[0], 100])\n",
-    "generatedImages = generators[0].predict(noise)\n",
-    "temp = generatedImages[:25].reshape(25, 62, 47)\n",
-    "plt.figure(figsize=(5, 5))\n",
-    "for i in range(temp.shape[0]):\n",
-    "    plt.subplot(5,5, i+1)\n",
-    "    plt.imshow(temp[i], interpolation='nearest', cmap='gray_r')\n",
-    "    plt.axis('off')\n",
-    "plt.tight_layout()"
+    "with torch.no_grad():\n",
+    "    scores_train = discriminators[0](torch.tensor(X, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "    scores_test = discriminators[0](torch.tensor(X_comp, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "\n",
+    "plt.hist(scores_train, color='r', alpha=0.5, label='train', density=True, bins=50)\n",
+    "plt.hist(scores_test, color='b', alpha=0.5, label='test', density=True, bins=50)\n",
+    "plt.xlabel('Discriminator probability')\n",
+    "plt.ylabel('Normed frequency')\n",
+    "plt.title('privGAN')\n",
+    "plt.legend()\n"
    ]
   },
   {
