--- a/PrivGAN_mnist_fash_tf2.ipynb
+++ b/PrivGAN_mnist_fash_tf2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copyright (c) Microsoft Corporation. All rights reserved. \n",
+    "# Copyright (c) Microsoft Corporation. All rights reserved.\n",
     "# Licensed under the MIT License\n",
     "\n",
     "import os\n",
@@ -14,23 +14,17 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.keras import Input\n",
-    "from tensorflow.keras import Model, Sequential\n",
-    "from tensorflow.keras.layers import Reshape, Dense, Dropout, Flatten, LeakyReLU, Conv2D, MaxPooling2D, ZeroPadding2D, Conv2DTranspose, UpSampling2D, BatchNormalization\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.datasets import fashion_mnist\n",
-    "from tensorflow.keras import initializers\n",
-    "from tensorflow.keras import backend as K\n",
-    "from scipy import stats\n",
-    "import tensorflow as tf\n",
+    "import torch\n",
+    "from torchvision import datasets, transforms\n",
     "import warnings\n",
     "from privacygan import privacy_gan as pg\n",
     "from privacygan.mnist import mnist_gan\n",
     "from datetime import datetime\n",
     "\n",
-    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "print(tf.__version__)"
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(torch.__version__, \"device:\", device)\n"
    ]
   },
   {
@@ -46,25 +40,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load MNIST data\n",
-    "(X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()\n",
-    "X_train = (X_train.astype(np.float32) - 127.5)/127.5\n",
-    "X_test = (X_test.astype(np.float32) - 127.5)/127.5\n",
-    "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1]*X_train.shape[2])\n",
-    "X_test = X_test.reshape(X_test.shape[0], X_test.shape[1]*X_test.shape[2])\n",
-    "X_all = np.concatenate((X_train,X_test))\n",
+    "# Load Fashion-MNIST data and concatenate the train+test set using torchvision\n",
+    "transform = transforms.Compose([transforms.ToTensor()])\n",
+    "train_ds = datasets.FashionMNIST(root=\"./data\", train=True, download=True, transform=transform)\n",
+    "test_ds = datasets.FashionMNIST(root=\"./data\", train=False, download=True, transform=transform)\n",
     "\n",
+    "X_train = (train_ds.data.float() - 127.5) / 127.5\n",
+    "X_test = (test_ds.data.float() - 127.5) / 127.5\n",
+    "X_train = X_train.view(X_train.size(0), -1).numpy()\n",
+    "X_test = X_test.view(X_test.size(0), -1).numpy()\n",
+    "X_all = np.concatenate((X_train, X_test))\n",
     "\n",
-    "#Generate training test split\n",
-    "frac = 0.1 \n",
-    "n = int(frac*len(X_all))\n",
-    "l = np.array(range(len(X_all)))\n",
-    "l = np.random.choice(l,len(l),replace = False)\n",
-    "X = X_all[l[:n]]\n",
-    "X_comp = X_all[l[n:]]\n",
+    "# Generate training/test split\n",
+    "frac = 0.1\n",
+    "n = int(frac * len(X_all))\n",
+    "idx = np.random.permutation(len(X_all))\n",
+    "X = X_all[idx[:n]]\n",
+    "X_comp = X_all[idx[n:]]\n",
     "\n",
-    "print('training set size:',X.shape)\n",
-    "print('test set size:',X_comp.shape)"
+    "print('training set size:', X.shape)\n",
+    "print('test set size:', X_comp.shape)\n"
    ]
   },
   {
@@ -80,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(generator, discriminator, dLosses, gLosses) = pg.SimpGAN(X, epochs = 1, batchSize = 256, verbose = 50)"
+    "(generator, discriminator, dLosses, gLosses) = pg.SimpGAN(X, epochs=1, batchSize=256)"
    ]
   },
   {
@@ -99,13 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot distribution of discriminator scores of training and test set\n",
-    "plt.hist(discriminator.predict(X)[:,0],color = 'r', alpha = 0.5, label = 'train', density = True, bins = 50)\n",
-    "plt.hist(discriminator.predict(X_comp)[:,0],color = 'b', alpha = 0.5, label = 'test', density = True, bins = 50)\n",
+    "with torch.no_grad():\n",
+    "    scores_train = discriminator(torch.tensor(X, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "    scores_test = discriminator(torch.tensor(X_comp, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "\n",
+    "plt.hist(scores_train, color='r', alpha=0.5, label='train', density=True, bins=50)\n",
+    "plt.hist(scores_test, color='b', alpha=0.5, label='test', density=True, bins=50)\n",
     "plt.xlabel('Discriminator probability')\n",
     "plt.ylabel('Normed frequency')\n",
     "plt.title('GAN')\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   },
   {
@@ -131,23 +129,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K.clear_session()\n",
-    "optim = Adam(lr=0.0002, beta_1=0.5)\n",
-    "generators = [mnist_gan.MNIST_Generator(optim = Adam(lr=0.0002, beta_1=0.5)),\n",
-    "              mnist_gan.MNIST_Generator(optim = Adam(lr=0.0002, beta_1=0.5))]\n",
-    "discriminators = [mnist_gan.MNIST_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5))\n",
-    "                  ,mnist_gan.MNIST_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5))]\n",
-    "pDisc = mnist_gan.MNIST_DiscriminatorPrivate(OutSize = 2, \n",
-    "                                      optim = Adam(lr=0.0002, beta_1=0.5))\n",
+    "### Test privGAN (with n_reps = 2)\n",
+    "generators = [mnist_gan.MNIST_Generator(), mnist_gan.MNIST_Generator()]\n",
+    "discriminators = [mnist_gan.MNIST_Discriminator(), mnist_gan.MNIST_Discriminator()]\n",
+    "pDisc = mnist_gan.MNIST_DiscriminatorPrivate(OutSize=2)\n",
     "\n",
-    "(generators, discriminators, _, dLosses, dpLosses, gLosses)= pg.privGAN(X, epochs = 1, \n",
-    "                                                                           disc_epochs=1,\n",
-    "                                                                           batchSize=256,\n",
-    "                                                                           generators = generators, \n",
-    "                                                                           discriminators = discriminators,\n",
-    "                                                                           pDisc = pDisc,\n",
-    "                                                                           optim = optim,\n",
-    "                                                                           privacy_ratio = 1.0)"
+    "(generators, discriminators, _, dLosses, dpLosses, gLosses) = pg.privGAN(\n",
+    "    X,\n",
+    "    epochs=1,\n",
+    "    disc_epochs=1,\n",
+    "    batchSize=256,\n",
+    "    generators=generators,\n",
+    "    discriminators=discriminators,\n",
+    "    pDisc=pDisc,\n",
+    "    privacy_ratio=1.0,\n",
+    ")\n"
    ]
   },
   {
@@ -176,13 +172,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot distribution of discriminator scores of training and test set\n",
-    "plt.hist(discriminators[0].predict(X)[:,0],color = 'r', alpha = 0.5, label = 'train', density = True, bins = 50)\n",
-    "plt.hist(discriminators[0].predict(X_comp)[:,0],color = 'b', alpha = 0.5, label = 'test', density = True, bins = 50)\n",
+    "with torch.no_grad():\n",
+    "    scores_train = discriminators[0](torch.tensor(X, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "    scores_test = discriminators[0](torch.tensor(X_comp, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "\n",
+    "plt.hist(scores_train, color='r', alpha=0.5, label='train', density=True, bins=50)\n",
+    "plt.hist(scores_test, color='b', alpha=0.5, label='test', density=True, bins=50)\n",
     "plt.xlabel('Discriminator probability')\n",
     "plt.ylabel('Normed frequency')\n",
     "plt.title('privGAN')\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   }
  ],
