--- a/PrivGan_CIFAR_tf2.ipynb
+++ b/PrivGan_CIFAR_tf2.ipynb
@@ -6,27 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copyright (c) Microsoft Corporation. All rights reserved. \n",
+    "# Copyright (c) Microsoft Corporation. All rights reserved.\n",
     "# Licensed under the MIT License\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import Input\n",
-    "from tensorflow.keras import Model, Sequential\n",
-    "from tensorflow.keras.layers import Reshape, Dense, Dropout, Flatten, LeakyReLU, Conv2D, MaxPooling2D, ZeroPadding2D, Conv2DTranspose, UpSampling2D, BatchNormalization\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.datasets import cifar10\n",
-    "from tensorflow.keras import initializers\n",
+    "import torch\n",
+    "from torchvision import datasets, transforms\n",
+    "import warnings\n",
     "from privacygan import privacy_gan as pg\n",
     "from privacygan.cifar import cifar_gan\n",
-    "import warnings\n",
+    "from datetime import datetime\n",
     "\n",
-    "print(tf.__version__)"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(torch.__version__, \"device:\", device)\n"
    ]
   },
   {
@@ -35,30 +33,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load CIFAR-10 data\n",
-    "(X_train, y_train), (X_test, y_test) = cifar10.load_data()\n",
+    "# Load CIFAR10 data and concatenate the train+test set using torchvision\n",
+    "transform = transforms.Compose([transforms.ToTensor()])\n",
+    "train_ds = datasets.CIFAR10(root=\"./data\", train=True, download=True, transform=transform)\n",
+    "test_ds = datasets.CIFAR10(root=\"./data\", train=False, download=True, transform=transform)\n",
     "\n",
-    "X_all = np.concatenate((X_train,X_test))\n",
+    "X_train = (torch.tensor(train_ds.data).float() - 127.5) / 127.5\n",
+    "X_test = (torch.tensor(test_ds.data).float() - 127.5) / 127.5\n",
+    "X_train = X_train.permute(0, 3, 1, 2).numpy()\n",
+    "X_test = X_test.permute(0, 3, 1, 2).numpy()\n",
+    "X_all = np.concatenate((X_train, X_test))\n",
     "\n",
-    "(n, d1, d2, d3) = X_all.shape\n",
+    "# Generate training/test split\n",
+    "frac = 0.1\n",
+    "n = int(frac * len(X_all))\n",
+    "idx = np.random.permutation(len(X_all))\n",
+    "X = X_all[idx[:n]]\n",
+    "X_comp = X_all[idx[n:]]\n",
     "\n",
-    "if d3 !=3:\n",
-    "    X_all = np.moveaxis(X_all, 1, 3)\n",
-    "    \n",
-    "X_all = np.float32(X_all)\n",
-    "X_all = (X_all / 255 - 0.5) * 2\n",
-    "X_all = np.clip(X_all, -1, 1)\n",
-    "\n",
-    "#Generate training test split\n",
-    "frac = 0.1 \n",
-    "n = int(frac*len(X_all))\n",
-    "l = np.array(range(len(X_all)))\n",
-    "l = np.random.choice(l,len(l),replace = False)\n",
-    "X = X_all[l[:n]]\n",
-    "X_comp = X_all[l[n:]]\n",
-    "\n",
-    "print(X.shape)\n",
-    "print(X_comp.shape)"
+    "print('training set size:', X.shape)\n",
+    "print('test set size:', X_comp.shape)\n"
    ]
   },
   {
@@ -67,12 +61,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Specify models \n",
-    "generator = cifar_gan.CIFAR_Generator()\n",
-    "discriminator = cifar_gan.CIFAR_Discriminator()\n",
-    "generators = [cifar_gan.CIFAR_Generator(),cifar_gan.CIFAR_Generator()]\n",
-    "discriminators = [cifar_gan.CIFAR_Discriminator(),cifar_gan.CIFAR_Discriminator()]\n",
-    "pDisc = cifar_gan.CIFAR_DiscriminatorPrivate(OutSize = 2)"
+    "(generator, discriminator, dLosses, gLosses) = pg.SimpGAN(\n",
+    "    X,\n",
+    "    generator=cifar_gan.CIFAR_Generator(),\n",
+    "    discriminator=cifar_gan.CIFAR_Discriminator(),\n",
+    "    epochs=1,\n",
+    "    batchSize=128,\n",
+    ")\n"
    ]
   },
   {
@@ -81,10 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(generator, discriminator, dLosses, gLosses) = pg.SimpGAN(X, epochs = 1, \n",
-    "                                                          generator = generator, \n",
-    "                                                          discriminator = discriminator,\n",
-    "                                                          batchSize=256)"
+    "# Perform white box attack\n",
+    "Acc = pg.WBattack(X, X_comp, discriminator)"
    ]
   },
   {
@@ -93,23 +86,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#perform white box attack\n",
-    "Acc = pg.WBattack(X,X_comp, discriminator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plot distribution of discriminator scores of training and test set\n",
-    "plt.hist(discriminator.predict(X)[:,0],color = 'r', alpha = 0.5, label = 'train', density = True, bins = 50)\n",
-    "plt.hist(discriminator.predict(X_comp)[:,0],color = 'b', alpha = 0.5, label = 'test', density = True, bins = 50)\n",
+    "with torch.no_grad():\n",
+    "    scores_train = discriminator(torch.tensor(X, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "    scores_test = discriminator(torch.tensor(X_comp, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "\n",
+    "plt.hist(scores_train, color='r', alpha=0.5, label='train', density=True, bins=50)\n",
+    "plt.hist(scores_test, color='b', alpha=0.5, label='test', density=True, bins=50)\n",
     "plt.xlabel('Discriminator probability')\n",
     "plt.ylabel('Normed frequency')\n",
     "plt.title('GAN')\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   },
   {
@@ -118,15 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise = np.random.normal(0, 1, size=[X.shape[0], 100])\n",
-    "generatedImages = generator.predict(noise)\n",
-    "temp = generatedImages[:25].reshape(25, 32, 32, 3)\n",
-    "plt.figure(figsize=(5, 5))\n",
-    "for i in range(temp.shape[0]):\n",
-    "    plt.subplot(5,5, i+1)\n",
-    "    plt.imshow(temp[i], interpolation='nearest', cmap='gray_r')\n",
-    "    plt.axis('off')\n",
-    "plt.tight_layout()"
+    "# Generate fake images\n",
+    "pg.DisplayImages(generator, figSize=(5,5), NoImages=25, TargetShape=(32,32,3))"
    ]
   },
   {
@@ -135,24 +114,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.keras.backend.clear_session()\n",
-    "optim = Adam(lr=0.0002, beta_1=0.5)\n",
-    "generator = cifar_gan.CIFAR_Generator(optim = Adam(lr=0.0002, beta_1=0.5))\n",
-    "discriminator = cifar_gan.CIFAR_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5))\n",
-    "generators = [cifar_gan.CIFAR_Generator(optim = Adam(lr=0.0002, beta_1=0.5)),\n",
-    "              cifar_gan.CIFAR_Generator(optim = Adam(lr=0.0002, beta_1=0.5))]\n",
-    "discriminators = [cifar_gan.CIFAR_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5)),\n",
-    "                  cifar_gan.CIFAR_Discriminator(optim = Adam(lr=0.0002, beta_1=0.5))]\n",
-    "pDisc = cifar_gan.CIFAR_DiscriminatorPrivate(OutSize = 2,\n",
-    "                                     optim = Adam(lr=0.0002, beta_1=0.5))\n",
-    "(generators, discriminators, _, dLosses, dpLosses, gLosses)= pg.privGAN(X, epochs = 1,\n",
-    "                                                                           disc_epochs=1,\n",
-    "                                                                           generators = generators, \n",
-    "                                                                           discriminators = discriminators,\n",
-    "                                                                           pDisc = pDisc,\n",
-    "                                                                           optim = optim,\n",
-    "                                                                           privacy_ratio=1.0,\n",
-    "                                                                           batchSize=256)"
+    "### Test privGAN (with n_reps = 2)\n",
+    "generators = [cifar_gan.CIFAR_Generator(), cifar_gan.CIFAR_Generator()]\n",
+    "discriminators = [cifar_gan.CIFAR_Discriminator(), cifar_gan.CIFAR_Discriminator()]\n",
+    "pDisc = cifar_gan.CIFAR_DiscriminatorPrivate(OutSize=2)\n",
+    "\n",
+    "(generators, discriminators, _, dLosses, dpLosses, gLosses) = pg.privGAN(\n",
+    "    X,\n",
+    "    epochs=1,\n",
+    "    disc_epochs=1,\n",
+    "    batchSize=128,\n",
+    "    generators=generators,\n",
+    "    discriminators=discriminators,\n",
+    "    pDisc=pDisc,\n",
+    "    privacy_ratio=1.0,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform white box attack for privGAN\n",
+    "pg.WBattack_priv(X, X_comp, discriminators)"
    ]
   },
   {
@@ -171,15 +157,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise = np.random.normal(0, 1, size=[X.shape[0], 100])\n",
-    "generatedImages = generators[0].predict(noise)\n",
-    "temp = generatedImages[:25].reshape(25, 32, 32, 3)\n",
-    "plt.figure(figsize=(5, 5))\n",
-    "for i in range(temp.shape[0]):\n",
-    "    plt.subplot(5,5, i+1)\n",
-    "    plt.imshow(temp[i], interpolation='nearest', cmap='gray_r')\n",
-    "    plt.axis('off')\n",
-    "plt.tight_layout()"
+    "with torch.no_grad():\n",
+    "    scores_train = discriminators[0](torch.tensor(X, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "    scores_test = discriminators[0](torch.tensor(X_comp, dtype=torch.float32, device=device)).cpu().numpy().squeeze()\n",
+    "\n",
+    "plt.hist(scores_train, color='r', alpha=0.5, label='train', density=True, bins=50)\n",
+    "plt.hist(scores_test, color='b', alpha=0.5, label='test', density=True, bins=50)\n",
+    "plt.xlabel('Discriminator probability')\n",
+    "plt.ylabel('Normed frequency')\n",
+    "plt.title('privGAN')\n",
+    "plt.legend()\n"
    ]
   },
   {
