--- a/MNIST_down_tf2.ipynb
+++ b/MNIST_down_tf2.ipynb
@@ -14,29 +14,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copyright (c) Microsoft Corporation. All rights reserved. \n",
-    "# Licensed under the MIT License.\n",
-    "\n",
-    "import os\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import Input\n",
-    "from tensorflow.keras import Model, Sequential\n",
-    "from tensorflow.keras.layers import Reshape, Dense, Dropout, Flatten, LeakyReLU, Conv2D, MaxPooling2D\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from privacygan import privacy_gan as pg\n",
-    "from privacygan.mnist import mnist_gan\n",
+    "import torch\n",
+    "from torchvision import datasets, transforms\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from classifier.cnn_classifier import CNNClassifier\n",
-    "import warnings\n",
     "\n",
-    "print(tf.__version__)\n",
-    "\n",
-    "#https://github.com/keras-team/keras/wiki/Keras-2.0-release-notes\n",
-    "#https://stackoverflow.com/questions/60289143/migrating-code-to-tensorflow-2-0-gives-invalid-argument-error-default-maxpoolin\n",
-    "tf.keras.backend.set_image_data_format(\"channels_last\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(torch.__version__, \"device:\", device)\n"
    ]
   },
   {
@@ -52,16 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load MNIST data\n",
-    "(X_train, y_train), (X_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
-    "X_train = (X_train.astype(np.float32) - 127.5)/127.5\n",
-    "X_test = (X_test.astype(np.float32) - 127.5)/127.5\n",
-    "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1]*X_train.shape[2])\n",
-    "X_test = X_test.reshape(X_test.shape[0], X_test.shape[1]*X_test.shape[2])\n",
-    "print(X_train.shape)\n",
-    "print(X_test.shape)\n",
+    "transform = transforms.Compose([transforms.ToTensor()])\n",
+    "train_ds = datasets.MNIST(root=\"./data\", train=True, download=True, transform=transform)\n",
+    "X = (train_ds.data.float() - 127.5) / 127.5\n",
+    "X = X.view(X.size(0), 1, 28, 28).numpy()\n",
+    "y = train_ds.targets.numpy()\n",
     "\n",
-    "NUM_CLASSES = 10"
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
+    "print('train:', X_train.shape, 'val:', X_val.shape)\n"
    ]
   },
   {
@@ -70,20 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CNN model to classify MNIST dataset\n",
-    "NUM_EPOCHS = 1 # use 25 for actual results\n",
-    "BATCH_SIZE_PER_EPOCH = 256\n",
-    "y_tr = tf.keras.utils.to_categorical(y_train, NUM_CLASSES)\n",
-    "y_t = tf.keras.utils.to_categorical(y_test, NUM_CLASSES)\n",
-    "\n",
-    "x_train = X_train.reshape(X_train.shape[0], 28, 28, 1)\n",
-    "x_test = X_test.reshape(X_test.shape[0], 28, 28, 1)\n",
-    "\n",
-    "classifier = CNNClassifier(NUM_CLASSES,(28,28,1))\n",
-    "score = classifier.train(x_train,y_tr,x_test,y_t,BATCH_SIZE_PER_EPOCH, NUM_EPOCHS)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])\n",
-    "r_0 = [score[0],score[1]]"
+    "clf = CNNClassifier(num_classes=10, input_shape=(1, 28, 28), device=device)\n",
+    "val_loss, val_acc = clf.train(X_train, y_train, X_val, y_val, batch_size=256, epochs=5)\n",
+    "print('Validation loss:', val_loss, 'Validation acc:', val_acc)\n"
    ]
   },
   {
@@ -99,37 +71,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#generate simple synthetic images of same size as X_train with same balance\n",
-    "X_c = []\n",
-    "y_c = []\n",
+    "# Evaluate on test split\n",
+    "test_ds = datasets.MNIST(root=\"./data\", train=False, download=True, transform=transform)\n",
+    "X_test = (test_ds.data.float() - 127.5) / 127.5\n",
+    "X_test = X_test.view(X_test.size(0), 1, 28, 28).numpy()\n",
+    "y_test = test_ds.targets.numpy()\n",
     "\n",
-    "for i in range(NUM_CLASSES):\n",
-    "    print(i)\n",
-    "    In = np.where(y_train==i)\n",
-    "    X = X_train[In]\n",
-    "    tf.keras.backend.clear_session()\n",
-    "    optim = Adam(lr=0.0002, beta_1=0.5)\n",
-    "    gen = pg.MNIST_Generator(optim=optim)\n",
-    "    dis = pg.MNIST_Discriminator(optim=optim)\n",
-    "    \n",
-    "    #learn generator per digit \n",
-    "    (generator, _, _, _) = pg.SimpGAN(X, generator = gen, discriminator = dis, \n",
-    "                                      optim = optim, \n",
-    "                                      epochs = 1, batchSize = 256)\n",
-    "    \n",
-    "    noise = np.random.normal(0, 1, size=[len(X), 100])\n",
-    "    X_c += [generator.predict(noise)]\n",
-    "    y_c += [i]*len(X)\n",
-    "    \n",
-    "X_c = np.concatenate(X_c)    \n",
-    "y_c = np.array(y_c)\n",
-    "\n",
-    "\n",
-    "## Shuffle labels around\n",
-    "arr = np.arange(len(X_c))\n",
-    "np.random.shuffle(arr)\n",
-    "X_c = X_c[arr]\n",
-    "y_c = y_c[arr]"
+    "with torch.no_grad():\n",
+    "    xb = torch.tensor(X_test, dtype=torch.float32, device=device)\n",
+    "    logits = clf.model(xb)\n",
+    "    preds = logits.argmax(dim=1).cpu().numpy()\n",
+    "    test_acc = (preds == y_test).mean()\n",
+    "print('Test accuracy:', test_acc)\n"
    ]
   },
   {
@@ -138,20 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CNN model to classify SimpGan generated images\n",
-    "y_tr = tf.keras.utils.to_categorical(y_c, NUM_CLASSES)\n",
-    "y_t = tf.keras.utils.to_categorical(y_test, NUM_CLASSES)\n",
-    "\n",
-    "\n",
-    "x_train = X_c.reshape(X_c.shape[0], 28, 28, 1)\n",
-    "x_test = X_test.reshape(X_test.shape[0], 28, 28, 1)\n",
-    "\n",
-    "classifier = CNNClassifier(NUM_CLASSES,(28,28,1))\n",
-    "score = classifier.train(x_train,y_tr,x_test,y_t,BATCH_SIZE_PER_EPOCH, NUM_EPOCHS)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])\n",
-    "\n",
-    "r_1 = [score[0],score[1]]"
+    "# You can now reuse clf.model for downstream tasks or save it\n",
+    "# torch.save(clf.model.state_dict(), 'mnist_cnn.pth')\n"
    ]
   },
   {
