--- a/MNIST_down_tf2.ipynb
+++ b/MNIST_down_tf2.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4.1 device: cpu\n"
+      "2.4.1+cu124 device: cuda\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation loss: 0.04143974767128626 Validation acc: 0.98825\n"
+      "Validation loss: 0.045526874269048376 Validation acc: 0.9873333333333333\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.9891\n"
+      "Test accuracy: 0.9877\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +157,14 @@
      "output_type": "stream",
      "text": [
       "Class 0: 4738 samples\n",
-      "dp-Accuracy: 0.5063317855635289\n",
+      "dp-Accuracy: 0.5329252849303504\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.09799124 1.10632254]\n",
+      "dLosses = [1.07640633 1.09752706]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.6827569246292113\n",
+      "gLosses = 2.6792660117149354\n",
       "dp-Accuracy: 0.0\n",
       "Class 1: 5394 samples\n",
       "dp-Accuracy: 0.5\n",
@@ -172,89 +172,89 @@
       "Batch size: 256\n",
       "Batches per epoch: 11\n",
       "epoch = 0/1, batch = 11/11\n",
-      "dLosses = [1.08544774 1.08965465]\n",
+      "dLosses = [1.08730829 1.08912768]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.6740826801820234\n",
+      "gLosses = 2.6667770472439853\n",
       "dp-Accuracy: 0.5\n",
       "Class 2: 4766 samples\n",
-      "dp-Accuracy: 0.5\n",
+      "dp-Accuracy: 0.5203524968527067\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.10139148 1.08133368]\n",
+      "dLosses = [1.07828544 1.08481712]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.6845192909240723\n",
-      "dp-Accuracy: 0.5\n",
+      "gLosses = 2.68332759141922\n",
+      "dp-Accuracy: 0.0\n",
       "Class 3: 4905 samples\n",
-      "dp-Accuracy: 0.5039755351681957\n",
+      "dp-Accuracy: 0.5153924566768604\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.08291345 1.10880828]\n",
+      "dLosses = [1.08789288 1.1015175 ]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.682564210891724\n",
+      "gLosses = 2.6812504887580872\n",
       "dp-Accuracy: 0.0\n",
       "Class 4: 4674 samples\n",
-      "dp-Accuracy: 0.5\n",
+      "dp-Accuracy: 0.542148053059478\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.09290233 1.08641111]\n",
+      "dLosses = [1.08931083 1.09340841]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.6840496182441713\n",
-      "dp-Accuracy: 0.48828125\n",
+      "gLosses = 2.6784255504608154\n",
+      "dp-Accuracy: 0.0\n",
       "Class 5: 4337 samples\n",
-      "dp-Accuracy: 0.5093382522480978\n",
+      "dp-Accuracy: 0.5001152870647914\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 9\n",
       "epoch = 0/1, batch = 9/9\n",
-      "dLosses = [1.08743846 1.08846084]\n",
+      "dLosses = [1.10499313 1.10979367]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.6966515514585705\n",
+      "gLosses = 2.699765827920702\n",
       "dp-Accuracy: 0.0\n",
       "Class 6: 4734 samples\n",
-      "dp-Accuracy: 0.5101394169835235\n",
+      "dp-Accuracy: 0.5109843683988171\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.08714492 1.08655215]\n",
+      "dLosses = [1.07666467 1.0932292 ]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.684989368915558\n",
+      "gLosses = 2.687848079204559\n",
       "dp-Accuracy: 0.0\n",
       "Class 7: 5012 samples\n",
-      "dp-Accuracy: 0.5\n",
+      "dp-Accuracy: 0.5127693535514765\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.0811638  1.08462042]\n",
+      "dLosses = [1.08739663 1.10127476]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.684318649768829\n",
-      "dp-Accuracy: 0.5\n",
+      "gLosses = 2.680709946155548\n",
+      "dp-Accuracy: 0.0\n",
       "Class 8: 4681 samples\n",
-      "dp-Accuracy: 0.500106814783166\n",
+      "dp-Accuracy: 0.499893185216834\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.08331584 1.09019737]\n",
+      "dLosses = [1.07441229 1.08932002]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.6855976939201356\n",
+      "gLosses = 2.685555863380432\n",
       "dp-Accuracy: 0.5\n",
       "Class 9: 4759 samples\n",
-      "dp-Accuracy: 0.5339357007774742\n",
+      "dp-Accuracy: 0.5278419836100021\n",
       "Epochs: 1\n",
       "Batch size: 256\n",
       "Batches per epoch: 10\n",
       "epoch = 0/1, batch = 10/10\n",
-      "dLosses = [1.07353702 1.090606  ]\n",
+      "dLosses = [1.09092116 1.10713814]\n",
       "dpLosses = 0.0\n",
-      "gLosses = 2.681684947013855\n",
+      "gLosses = 2.683544409275055\n",
       "dp-Accuracy: 0.0\n",
       "Synthetic set: (47996, 1, 28, 28) (47996,)\n"
      ]
@@ -278,7 +278,7 @@
     "    discriminators = [mnist_gan.MNIST_Discriminator(), mnist_gan.MNIST_Discriminator()]\n",
     "    pDisc = mnist_gan.MNIST_DiscriminatorPrivate(OutSize=2)\n",
     "\n",
-    "    # 训练 privGAN（为保持演示速度，epochs=1，disc_epochs=1）\n",
+    "    # 训练 privGAN（为保持演示速度，epochs=1，disc_epochs=1），显式指定 device\n",
     "    generators, discriminators, pDisc, dLosses, dpLosses, gLosses = pg.privGAN(\n",
     "        X_cls,\n",
     "        epochs=1,\n",
@@ -288,15 +288,16 @@
     "        discriminators=discriminators,\n",
     "        pDisc=pDisc,\n",
     "        privacy_ratio=1.0,\n",
+    "        device=device,\n",
     "    )\n",
     "\n",
     "    # 生成合成样本（各一半）\n",
     "    n_each = max(1, len(X_cls) // 2)\n",
-    "    z1 = torch.randn(n_each, randomDim)\n",
-    "    z2 = torch.randn(n_each, randomDim)\n",
+    "    z1 = torch.randn(n_each, randomDim, device=device)\n",
+    "    z2 = torch.randn(n_each, randomDim, device=device)\n",
     "    with torch.no_grad():\n",
-    "        fake1 = generators[0](z1).cpu().numpy()\n",
-    "        fake2 = generators[1](z2).cpu().numpy()\n",
+    "        fake1 = generators[0](z1).detach().cpu().numpy()\n",
+    "        fake2 = generators[1](z2).detach().cpu().numpy()\n",
     "\n",
     "    # 将 784 展平向量还原为 (N, 1, 28, 28)\n",
     "    fake = np.concatenate([fake1, fake2], axis=0).reshape(-1, 1, 28, 28)\n",
@@ -305,12 +306,12 @@
     "\n",
     "X_c2 = np.concatenate(X_c2, axis=0)\n",
     "y_c2 = np.concatenate(y_c2, axis=0)\n",
-    "print('Synthetic set:', X_c2.shape, y_c2.shape)"
+    "print('Synthetic set:', X_c2.shape, y_c2.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -377,6 +378,22 @@
     "plt.title('CNN accuracy on real vs privGAN synthetic')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
