--- a/PrivGan_CIFAR_tf2.ipynb
+++ b/PrivGan_CIFAR_tf2.ipynb
@@ -415,7 +415,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.cuda.empty_cache()"
+   ]
   }
  ],
  "metadata": {
